--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>cob_mapping_slam</name>
-  <version>0.6.5</version>
+  <version>0.6.6</version>
   <description>
     cob_mapping_slam holds launch files for running SLAM using the <a href="http://ros.org/wiki/gmapping">gmapping</a> package.
   </description>
 
-  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
+  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
   <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
-  <license>LGPL</license>
+
+  <license>Apache 2.0</license>
   <url>http://ros.org/wiki/cob_mapping_slam</url>
 
   <buildtool_depend>catkin</buildtool_depend>
