--- a/package.xml
+++ b/package.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>cob_navigation_global</name>
-  <version>0.6.5</version>
+  <version>0.6.6</version>
   <description>
     This package holds config and launch files for running the  <a href="http://ros.org/wiki/move_base">move_base</a> node on the <a href="http://ros.org/wiki/care-o-bot">Care-O-bot</a>.
     The move_base node is configured to run over a pre-specified static map.
   </description>
 
-  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
+  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
   <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
-  <license>LGPL</license>
+
+  <license>Apache 2.0</license>
   <url>http://ros.org/wiki/cob_navigation_global</url>
 
   <buildtool_depend>catkin</buildtool_depend>
