Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.5-0": ["Tue Jul 25 2017", "Matthias Gruhler", "mig@ipa.fraunhofer.de"]}
+{"0.6.6-0": ["Sun Jan 07 2018", "Felix Zeltner", "fez@ipa.fraunhofer.de"], "0.6.5-0": ["Tue Jul 25 2017", "Matthias Gruhler", "mig@ipa.fraunhofer.de"]}
