--- a/package.xml
+++ b/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>cob_navigation</name>
-  <version>0.6.5</version>
+  <version>0.6.6</version>
   <description>
     The cob_navigation stack provides different navigation packages for <a href="http://ros.org/wiki/care-o-bot">Care-O-bot</a>.
   </description>
 
-  <maintainer email="mig@ipa.fraunhofer.de">Matthias Gruhler</maintainer>
-  <author email="mig@ipa.fraunhofer.de">Matthias Gruhler</author>
-  <license>LGPL</license>
+  <maintainer email="fez@ipa.fraunhofer.de">Felix Zeltner</maintainer>
+
+  <license>Apache 2.0</license>
   <url>http://ros.org/wiki/cob_navigation</url>
 
   <buildtool_depend>catkin</buildtool_depend>
