--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = c5b9e82
-	trimbase = 
+	base = 08d877e
+	trimbase = c5b9e82
 	parent = upstream
 	previous = 450b446
