--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 08e9d63
-	trimbase = 
+	base = 3ba63f3
+	trimbase = 08e9d63
 	parent = upstream
 	previous = 450b446
