--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 1d71f12
-	trimbase = 
+	base = e66ff6e
+	trimbase = 1d71f12
 	parent = upstream
 	previous = 450b446
