--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = 319280d
-	trimbase = c9748e4
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
