--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = decb538
-	trimbase = 
+	base = 7ca999f
+	trimbase = decb538
 	parent = upstream
 	previous = 450b446
