--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 40a2a74
-	trimbase = 
+	base = 3c56b55
+	trimbase = 40a2a74
 	parent = upstream
 	previous = 450b446
