--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = 87fbefa
-	trimbase = 129f8f4
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
