--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 1a0add9
-	trimbase = 
+	base = 436db9b
+	trimbase = 1a0add9
 	parent = upstream
 	previous = 450b446
