--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = b391842
-	trimbase = a36fe95
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
