--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = bd5fbc5
-	trimbase = 
+	base = d15fa74
+	trimbase = bd5fbc5
 	parent = upstream
 	previous = 450b446
