--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 213247d
-	trimbase = c194b19
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
