--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = a41e05d
-	trimbase = 
+	base = b38d04e
+	trimbase = a41e05d
 	parent = upstream
 	previous = 450b446
