--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.6": ["Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.5": ["Richard Bormann", "richard.bormann@ipa.fraunhofer.de"]}
+{"0.6.7": ["Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.6": ["Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.5": ["Richard Bormann", "richard.bormann@ipa.fraunhofer.de"]}
