--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.6-0": ["Sun Jan 07 2018", "Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.5-0": ["Tue Jul 18 2017", "Richard Bormann", "richard.bormann@ipa.fraunhofer.de"]}
+{"0.6.6-0": ["Sun Jan 07 2018", "Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.5-0": ["Tue Jul 18 2017", "Richard Bormann", "richard.bormann@ipa.fraunhofer.de"], "0.6.7-0": ["Sat Jul 21 2018", "Richard Bormann", "richard.bormann@ipa.fraunhofer.de"]}
