--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = ddb1d5f
-	trimbase = 
+	base = 3a4ea70
+	trimbase = ddb1d5f
 	parent = upstream
 	previous = 450b446
