--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 76d51f2
-	trimbase = 
+	base = 6c8033f
+	trimbase = 76d51f2
 	parent = upstream
 	previous = 450b446
