--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 674940f
-	trimbase = 
+	base = 2a1539f
+	trimbase = 674940f
 	parent = upstream
 	previous = 450b446
