--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = 8da2bd0
-	trimbase = 5ebf5ba
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
