--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 5683e48
-	trimbase = 
+	base = c2956bc
+	trimbase = 5683e48
 	parent = upstream
 	previous = 450b446
