--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 5a292b2
-	trimbase = 
+	base = a73d901
+	trimbase = 5a292b2
 	parent = upstream
 	previous = 450b446
