--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = d9f2f1d
-	trimbase = 523ee5f
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
