--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 640207e
-	trimbase = 
+	base = bf6cc57
+	trimbase = 640207e
 	parent = upstream
 	previous = 450b446
