--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 0ce79bf
-	trimbase = 
+	base = b04b454
+	trimbase = 0ce79bf
 	parent = upstream
 	previous = 450b446
