--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = 60aba13
-	trimbase = f003c38
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
