--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 07c23d1
-	trimbase = e5c6a49
+	trimbase = 
 	parent = upstream
 	previous = ba5bf43
