--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = b67aca8
-	trimbase = 
+	base = 2b48937
+	trimbase = b67aca8
 	parent = upstream
 	previous = 450b446
