--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = d834de4
-	trimbase = 
+	base = 62fb611
+	trimbase = d834de4
 	parent = upstream
 	previous = 44f2271
