--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 6a7d2dd
-	trimbase = 
+	base = ed7b50b
+	trimbase = 6a7d2dd
 	parent = upstream
 	previous = 44f2271
