--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = b53e354
-	trimbase = 
+	base = 3e88189
+	trimbase = b53e354
 	parent = upstream
 	previous = 44f2271
