--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 896b69d
-	trimbase = 
+	base = 6d4e613
+	trimbase = 896b69d
 	parent = upstream
 	previous = 44f2271
