--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 742e8e8
-	trimbase = 
+	base = 1a49b4e
+	trimbase = 742e8e8
 	parent = upstream
 	previous = 44f2271
