--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = bf6cc57
-	trimbase = 640207e
+	trimbase = 
 	parent = upstream
 	previous = 450b446
