--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 4605027
-	trimbase = 
+	base = aa82fa4
+	trimbase = 4605027
 	parent = upstream
 	previous = 44f2271
