--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = b04b454
-	trimbase = 0ce79bf
+	trimbase = 
 	parent = upstream
 	previous = 450b446
