--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = d16167e
-	trimbase = 
+	base = 177ae40
+	trimbase = d16167e
 	parent = upstream
 	previous = 44f2271
