--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 2b48937
-	trimbase = b67aca8
+	trimbase = 
 	parent = upstream
 	previous = 450b446
