--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = 379e8c2
-	trimbase = 
+	base = 0bd52d4
+	trimbase = 379e8c2
 	parent = upstream
 	previous = 44f2271
