--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 13b8731
-	trimbase = 
+	trim = cob_mapping_slam
+	base = c649080
+	trimbase = 13b8731
 	parent = upstream
 	previous = 44f2271
