--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9844847
-	trimbase = 
+	trim = cob_navigation
+	base = fed21d1
+	trimbase = 9844847
 	parent = upstream
 	previous = 44f2271
