--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = edd3fbe
-	trimbase = 
+	trim = cob_navigation_slam
+	base = 082a845
+	trimbase = edd3fbe
 	parent = upstream
 	previous = 44f2271
