--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 235c779
-	trimbase = 
+	trim = cob_navigation_config
+	base = 31e93e0
+	trimbase = 235c779
 	parent = upstream
 	previous = 44f2271
