--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 3a7a023
-	trimbase = 
+	trim = cob_linear_nav
+	base = 4200f3d
+	trimbase = 3a7a023
 	parent = upstream
 	previous = 44f2271
