--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0b9a115
-	trimbase = 
+	trim = cob_navigation_global
+	base = 36ce2c4
+	trimbase = 0b9a115
 	parent = upstream
 	previous = 44f2271
