--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f772db2
-	trimbase = 
+	trim = cob_navigation_local
+	base = acda377
+	trimbase = f772db2
 	parent = upstream
 	previous = 44f2271
