--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 36ce2c4
+	base = 6d9c1d6
 	trimbase = 
 	parent = release/melodic/cob_navigation_global
-	previous = 
+	previous = 36ce2c4
