--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f9e0d49
+	base = dc7ba02
 	trimbase = 
 	parent = debian/melodic/cob_navigation_local
-	previous = 
+	previous = f9e0d49
