--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f6949e8
+	base = 102ddc8
 	trimbase = 
 	parent = debian/melodic/cob_navigation_slam
-	previous = 
+	previous = f6949e8
