--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7ab8a33
+	base = 66677d3
 	trimbase = 
 	parent = release/melodic/cob_map_accessibility_analysis
-	previous = 
+	previous = 7ab8a33
