--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0f08c88
+	base = 5498b63
 	trimbase = 
 	parent = debian/melodic/cob_map_accessibility_analysis
-	previous = 
+	previous = 0f08c88
