--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fed21d1
+	base = acc210f
 	trimbase = 
 	parent = release/melodic/cob_navigation
-	previous = 
+	previous = fed21d1
