--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8e5746
+	base = 8e6cc7a
 	trimbase = 
 	parent = debian/melodic/cob_navigation
-	previous = 
+	previous = a8e5746
