--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4200f3d
+	base = dffd80e
 	trimbase = 
 	parent = release/melodic/cob_linear_nav
-	previous = 
+	previous = 4200f3d
