--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bff94ee
+	base = dc1209c
 	trimbase = 
 	parent = debian/melodic/cob_linear_nav
-	previous = 
+	previous = bff94ee
