--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 971a9c9
+	base = 2c26a8d
 	trimbase = 
 	parent = debian/melodic/cob_navigation_config
-	previous = 
+	previous = 971a9c9
