--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c649080
+	base = 9adfe99
 	trimbase = 
 	parent = release/melodic/cob_mapping_slam
-	previous = 
+	previous = c649080
