--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1e0f429
+	base = 8e719d0
 	trimbase = 
 	parent = debian/melodic/cob_mapping_slam
-	previous = 
+	previous = 1e0f429
