--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4dc041e
+	base = 3869630
 	trimbase = 
 	parent = debian/melodic/cob_navigation_global
-	previous = 
+	previous = 4dc041e
