--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = eb797b3
+	base = 13eaab7
 	trimbase = 
 	parent = debian/melodic/cob_navigation_local
-	previous = 
+	previous = eb797b3
