--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 07f3265
+	base = 8faa2bb
 	trimbase = 
 	parent = debian/melodic/cob_navigation_slam
-	previous = 
+	previous = 07f3265
