--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14ab3ca
+	base = db0dde6
 	trimbase = 
 	parent = debian/melodic/cob_map_accessibility_analysis
-	previous = 
+	previous = 14ab3ca
