--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f1b03c8
+	base = 6875e66
 	trimbase = 
 	parent = debian/melodic/cob_navigation
-	previous = 
+	previous = f1b03c8
