--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 81c0455
+	base = ef221ae
 	trimbase = 
 	parent = debian/melodic/cob_linear_nav
-	previous = 
+	previous = 81c0455
