--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a14970b
+	base = b7db839
 	trimbase = 
 	parent = debian/melodic/cob_navigation_config
-	previous = 
+	previous = a14970b
