--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4cb7cd5
+	base = ee6b128
 	trimbase = 
 	parent = debian/melodic/cob_mapping_slam
-	previous = 
+	previous = 4cb7cd5
