--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 73717de
+	base = c7a7dca
 	trimbase = 
 	parent = rpm/melodic/cob_navigation_global
-	previous = 
+	previous = 73717de
