--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = acda377
+	base = 64e4bf0
 	trimbase = 
 	parent = release/melodic/cob_navigation_local
-	previous = 
+	previous = acda377
