--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a093a40
+	base = 9c0e96e
 	trimbase = 
 	parent = rpm/melodic/cob_navigation_local
-	previous = 
+	previous = a093a40
