--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 082a845
+	base = 91bb286
 	trimbase = 
 	parent = release/melodic/cob_navigation_slam
-	previous = 
+	previous = 082a845
