--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 14ebbb3
+	base = 52f668a
 	trimbase = 
 	parent = rpm/melodic/cob_navigation_slam
-	previous = 
+	previous = 14ebbb3
