--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6dbf13d
+	base = cbe7db2
 	trimbase = 
 	parent = rpm/melodic/cob_map_accessibility_analysis
-	previous = 
+	previous = 6dbf13d
