--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c262c94
+	base = 74c91d1
 	trimbase = 
 	parent = rpm/melodic/cob_navigation
-	previous = 
+	previous = c262c94
