--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b3c0116
+	base = 28f6e31
 	trimbase = 
 	parent = rpm/melodic/cob_linear_nav
-	previous = 
+	previous = b3c0116
