--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 31e93e0
+	base = 5be66eb
 	trimbase = 
 	parent = release/melodic/cob_navigation_config
-	previous = 
+	previous = 31e93e0
