--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3eb9f42
+	base = aeca45e
 	trimbase = 
 	parent = rpm/melodic/cob_navigation_config
-	previous = 
+	previous = 3eb9f42
