--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f42c42e
+	base = b61aa8e
 	trimbase = 
 	parent = rpm/melodic/cob_mapping_slam
-	previous = 
+	previous = f42c42e
