--- a/cob_navigation_local/CMakeLists.txt
+++ b/cob_navigation_local/CMakeLists.txt
@@ -9,27 +9,19 @@ catkin_package()
 ## Install ##
 #############
 
-install(DIRECTORY launch config
+install(DIRECTORY config launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
 #############
 ## Testing ##
 #############
-SET(robotlist
-    cob4-2
-    cob4-5
-    cob4-7
-    raw3-1
-    raw3-3
-    raw3-5
-)
-    
 if(CATKIN_ENABLE_TESTING)
+  find_package(cob_supported_robots REQUIRED)
   find_package(roslaunch REQUIRED)
-  foreach(robot ${robotlist})
+  foreach(robot ${cob_supported_robots_ROBOTLIST})
     message("testing for robot: ${robot}")
-    roslaunch_add_file_check(launch ROBOT=${robot})    # testing environment variables
-    roslaunch_add_file_check(launch robot:=${robot})   # testing launch file arguments
+    roslaunch_add_file_check(launch ROBOT=${robot})   # testing environment variables
+    roslaunch_add_file_check(launch robot:=${robot})  # testing launch file arguments
   endforeach()
 endif()
