--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = def4b00
-	trimbase = 
+	base = 080d31e
+	trimbase = def4b00
 	parent = upstream
 	previous = c252194
