--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 7e4f873
-	trimbase = 
+	base = 3a2bb6e
+	trimbase = 7e4f873
 	parent = upstream
 	previous = c252194
