--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 7e79fe9
-	trimbase = 
+	base = 3dddb5c
+	trimbase = 7e79fe9
 	parent = upstream
 	previous = c252194
