--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 87d62f3
-	trimbase = 
+	base = 618fd76
+	trimbase = 87d62f3
 	parent = upstream
 	previous = c252194
