--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = e4c1293
-	trimbase = 
+	base = 132cbab
+	trimbase = e4c1293
 	parent = upstream
 	previous = c252194
