--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = aa82fa4
-	trimbase = 4605027
+	trimbase = 
 	parent = upstream
 	previous = 44f2271
