--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = a9cfd70
-	trimbase = 
+	base = 0a219ef
+	trimbase = a9cfd70
 	parent = upstream
 	previous = c252194
