--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = 1d852ff
-	trimbase = 
+	base = 085fb8f
+	trimbase = 1d852ff
 	parent = upstream
 	previous = c252194
