--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,16 @@ catkin_package()
 
 install(DIRECTORY launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+
+#############
+## Testing ##
+#############
+if(CATKIN_ENABLE_TESTING)
+  find_package(cob_supported_robots REQUIRED)
+  find_package(roslaunch REQUIRED)
+  foreach(robot ${cob_supported_robots_ROBOTLIST})
+    message("testing for robot: ${robot}")
+    roslaunch_add_file_check(launch ROBOT=${robot})   # testing environment variables
+    roslaunch_add_file_check(launch robot:=${robot})  # testing launch file arguments
+  endforeach()
+endif()
