--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>cob_mapping_slam</name>
-  <version>0.6.8</version>
+  <version>0.6.9</version>
   <description>
     cob_mapping_slam holds launch files for running SLAM using the <a href="http://ros.org/wiki/gmapping">gmapping</a> package.
   </description>
@@ -17,6 +17,8 @@
   <exec_depend>cob_navigation_global</exec_depend>
   <exec_depend>gmapping</exec_depend>
 
-</package>
+  <test_depend>cob_supported_robots</test_depend>
+  <test_depend>roslaunch</test_depend>
 
+</package>
 
