--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,23 +16,15 @@ install(DIRECTORY launch config
 #############
 ## Testing ##
 #############
-SET(robotlist
-    cob4-2
-    cob4-5
-    cob4-7
-    raw3-1
-    raw3-3
-    raw3-5
-)
-    
 if(CATKIN_ENABLE_TESTING)
   find_package(cob_default_env_config REQUIRED)
+  find_package(cob_supported_robots REQUIRED)
   find_package(roslaunch REQUIRED)
-  foreach(robot ${robotlist})
+  foreach(robot ${cob_supported_robots_ROBOTLIST})
     foreach(env ${cob_default_env_config_ENVLIST})
       message("testing for robot: ${robot} in env: ${env}")
-      roslaunch_add_file_check(launch ROBOT=${robot} ROBOT_ENV=${env})     # testing environment variables
-      roslaunch_add_file_check(launch robot:=${robot} robot_env:=${env})   # testing launch file arguments
-    endforeach(env)
-  endforeach(robot)
+      roslaunch_add_file_check(launch ROBOT=${robot} ROBOT_ENV=${env})   # testing environment variables
+      roslaunch_add_file_check(launch robot:=${robot} robot_env:=${env}) # testing launch file arguments
+    endforeach()
+  endforeach()
 endif()
