--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = a54f5d0
-	trimbase = 
+	base = 9fe0b35
+	trimbase = a54f5d0
 	parent = upstream
 	previous = c252194
