--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 087e936
-	trimbase = 
+	base = d24d2a7
+	trimbase = 087e936
 	parent = upstream
 	previous = c252194
