--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = ab547c2
-	trimbase = 
+	base = d0b5ca0
+	trimbase = ab547c2
 	parent = upstream
 	previous = c252194
