--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = 36ce2c4
-	trimbase = 0b9a115
+	trimbase = 
 	parent = upstream
 	previous = 44f2271
