--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 3ce176b
-	trimbase = 
+	base = c1dcfff
+	trimbase = 3ce176b
 	parent = upstream
 	previous = c252194
