--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 988095b
-	trimbase = 
+	base = abf88d4
+	trimbase = 988095b
 	parent = upstream
 	previous = c252194
