--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 7ab8a33
-	trimbase = f6f00ff
+	trimbase = 
 	parent = upstream
 	previous = 44f2271
