--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = 80e77cb
-	trimbase = 
+	base = 44b0e0d
+	trimbase = 80e77cb
 	parent = upstream
 	previous = c252194
