Store releaser history

--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.6.8-1": ["Wed Aug 07 2019", "Felix Zeltner", "fez@ipa.fraunhofer.de"]}
+{"0.6.8-1": ["Wed Aug 07 2019", "Felix Zeltner", "fez@ipa.fraunhofer.de"], "0.6.9-1": ["Thu Nov 07 2019", "Felix Zeltner", "fez@ipa.fraunhofer.de"]}
