--- a/cob_navigation_global/CMakeLists.txt
+++ b/cob_navigation_global/CMakeLists.txt
@@ -9,7 +9,7 @@ catkin_package()
 ## Install ##
 #############
 
-install(DIRECTORY launch config
+install(DIRECTORY config launch
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
@@ -21,10 +21,11 @@ if(CATKIN_ENABLE_TESTING)
   find_package(cob_supported_robots REQUIRED)
   find_package(roslaunch REQUIRED)
   foreach(robot ${cob_supported_robots_ROBOTLIST})
-    foreach(env ${cob_default_env_config_ENVLIST})
+    #foreach(env ${cob_default_env_config_ENVLIST}) # no need to loop over envs as env-specific map.yaml (filepath) is only used as arg string for map server and not as file
+      set(env "empty")
       message("testing for robot: ${robot} in env: ${env}")
       roslaunch_add_file_check(launch ROBOT=${robot} ROBOT_ENV=${env})   # testing environment variables
       roslaunch_add_file_check(launch robot:=${robot} robot_env:=${env}) # testing launch file arguments
-    endforeach()
+    #endforeach()
   endforeach()
 endif()
