--- a/.travis.yml
+++ b/.travis.yml
@@ -8,19 +8,21 @@ notifications:
     on_failure: always
 env:
   global:
+    - ADDITIONAL_DEBS='apt-utils dialog curl wget'
+    - CATKIN_LINT=pedantic
+    - CATKIN_LINT_ARGS='--ignore description_boilerplate'
+    - CMAKE_ARGS=-DCMAKE_BUILD_TYPE=Release
+    - NOT_TEST_DOWNSTREAM=true
+    - PYLINT_ARGS="--output-format=parseable --errors-only --ignored-modules=catkin_pkg"
+    - PYLINT2_CHECK=true
+    - PYLINT3_CHECK=true
     - ROS_REPO=ros
+    - VERBOSE_OUTPUT=false
+    - VERBOSE_TESTS=false
   matrix:
-    - ROS_DISTRO=indigo UPSTREAM_WORKSPACE=file
-    - ROS_DISTRO=indigo UPSTREAM_WORKSPACE=debian
-    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=file
-    - ROS_DISTRO=kinetic UPSTREAM_WORKSPACE=debian
-    - ROS_DISTRO=melodic UPSTREAM_WORKSPACE=file
-    - ROS_DISTRO=melodic UPSTREAM_WORKSPACE=debian
-matrix:
-  allow_failures:
-    - env: ROS_DISTRO=melodic UPSTREAM_WORKSPACE=debian
+    - ROS_DISTRO=kinetic
+    - ROS_DISTRO=melodic
 install:
-  - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - git clone --quiet --depth 1 https://github.com/fmessmer/industrial_ci.git .industrial_ci -b master_pylint
 script:
-  - .ci_config/travis.sh
-#  - ./travis.sh  # Enable this when you have a package-local script 
+  - .industrial_ci/travis.sh
