--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 81f288f
-	trimbase = 
+	base = 3857f76
+	trimbase = 81f288f
 	parent = upstream
 	previous = 3c0aad1
