--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 62e996c
-	trimbase = 
+	base = 20ce1b3
+	trimbase = 62e996c
 	parent = upstream
 	previous = 3c0aad1
