--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 8e656f5
-	trimbase = 
+	base = 43189de
+	trimbase = 8e656f5
 	parent = upstream
 	previous = 3c0aad1
