--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = de93923
-	trimbase = 
+	base = 4556cf8
+	trimbase = de93923
 	parent = upstream
 	previous = 3c0aad1
