--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = 02cde26
-	trimbase = 0dd8899
+	trimbase = 
 	parent = upstream
 	previous = c252194
