--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 550417e
-	trimbase = 
+	base = c408e17
+	trimbase = 550417e
 	parent = upstream
 	previous = 3c0aad1
