--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = 0a219ef
-	trimbase = a9cfd70
+	trimbase = 
 	parent = upstream
 	previous = c252194
