--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = ebac089
-	trimbase = 
+	base = e295075
+	trimbase = ebac089
 	parent = upstream
 	previous = 3c0aad1
