--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = a89552f
-	trimbase = 
+	base = 335dec6
+	trimbase = a89552f
 	parent = upstream
 	previous = 3c0aad1
