--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 3203c38
-	trimbase = 
+	base = 3162dea
+	trimbase = 3203c38
 	parent = upstream
 	previous = 3c0aad1
