--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = ad686cb
-	trimbase = 
+	base = 73662a7
+	trimbase = ad686cb
 	parent = upstream
 	previous = 3c0aad1
