--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = c0a9c53
-	trimbase = 34ef65e
+	trimbase = 
 	parent = upstream
 	previous = c252194
