--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = c114f63
-	trimbase = 
+	base = d563500
+	trimbase = c114f63
 	parent = upstream
 	previous = 3c0aad1
