--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = ae2c8d6
-	trimbase = 
+	base = 56ad120
+	trimbase = ae2c8d6
 	parent = upstream
 	previous = 3c0aad1
