--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = c1dcfff
-	trimbase = 3ce176b
+	trimbase = 
 	parent = upstream
 	previous = c252194
