--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = ebc1c3a
-	trimbase = 
+	base = 83214a1
+	trimbase = ebc1c3a
 	parent = upstream
 	previous = 3c0aad1
