--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 177633d
-	trimbase = 
+	base = 3e41936
+	trimbase = 177633d
 	parent = upstream
 	previous = 3c0aad1
