--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = bfbe817
-	trimbase = 
+	base = 2f933e4
+	trimbase = bfbe817
 	parent = upstream
 	previous = 3c0aad1
