--- a/cob_map_accessibility_analysis/package.xml
+++ b/cob_map_accessibility_analysis/package.xml
@@ -1,6 +1,10 @@
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>cob_map_accessibility_analysis</name>
-  <version>0.6.10</version>
+  <version>0.6.11</version>
   <description>
     cob_map_accessibility_analysis receives the map from navigation as well as obstacles and inflates_obstacles topics to assemble a common obstacle map. Upon request, this node checks the accessibility of poses within thin map by (i) checking whether the pose itself is free and by (ii) checking whether there is a closed path from robot to the goal pose.
   </description>
@@ -12,6 +16,8 @@
   <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
   <exec_depend>message_runtime</exec_depend>
