--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 0b256aa
-	trimbase = 
+	base = 9e07717
+	trimbase = 0b256aa
 	parent = upstream
 	previous = 0dfbd28
