--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 5474354
-	trimbase = 
+	base = 6d3c251
+	trimbase = 5474354
 	parent = upstream
 	previous = 0dfbd28
