--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 9b7c17d
-	trimbase = 
+	base = 9d06768
+	trimbase = 9b7c17d
 	parent = upstream
 	previous = 0dfbd28
