--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = 5f2601f
-	trimbase = 4c85224
+	trimbase = 
 	parent = upstream
 	previous = 3c0aad1
