--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 8555284
-	trimbase = 
+	base = 3aaa0bb
+	trimbase = 8555284
 	parent = upstream
 	previous = 0dfbd28
