--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = b3317ba
-	trimbase = 
+	base = 20b0dff
+	trimbase = b3317ba
 	parent = upstream
 	previous = 0dfbd28
