--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
 	base = c408e17
-	trimbase = 550417e
+	trimbase = 
 	parent = upstream
 	previous = 3c0aad1
