--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 2872a55
-	trimbase = 
+	base = 82879cc
+	trimbase = 2872a55
 	parent = upstream
 	previous = 0dfbd28
