--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = ffee8ea
-	trimbase = 83d6d79
+	trimbase = 
 	parent = upstream
 	previous = 3c0aad1
