--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 5c3487f
-	trimbase = 
+	base = ad11bd6
+	trimbase = 5c3487f
 	parent = upstream
 	previous = 0dfbd28
