--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = e721b1a
-	trimbase = 
+	base = 56f5df6
+	trimbase = e721b1a
 	parent = upstream
 	previous = 0dfbd28
