--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 6631e97
-	trimbase = 
+	base = b0f41a9
+	trimbase = 6631e97
 	parent = upstream
 	previous = 0dfbd28
