--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = edf0342
-	trimbase = 
+	base = 40b2764
+	trimbase = edf0342
 	parent = upstream
 	previous = 0dfbd28
