--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
-	base = 29e7c4e
-	trimbase = 
+	base = 6dfc5a2
+	trimbase = 29e7c4e
 	parent = upstream
 	previous = 0dfbd28
