--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = cb5ab14
-	trimbase = 
+	base = e975727
+	trimbase = cb5ab14
 	parent = upstream
 	previous = 0dfbd28
