--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 2fc925b
-	trimbase = 
+	base = 6682bae
+	trimbase = 2fc925b
 	parent = upstream
 	previous = 0dfbd28
