--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 0b30993
-	trimbase = 
+	base = 139a6de
+	trimbase = 0b30993
 	parent = upstream
 	previous = 0dfbd28
