--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
 	base = 3e41936
-	trimbase = 177633d
+	trimbase = 
 	parent = upstream
 	previous = 3c0aad1
