--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_local
-	base = 95a286e
-	trimbase = 
+	base = 75c56cc
+	trimbase = 95a286e
 	parent = upstream
 	previous = 0dfbd28
