--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 2f933e4
-	trimbase = bfbe817
+	trimbase = 
 	parent = upstream
 	previous = 3c0aad1
