--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
-	base = b4d507c
-	trimbase = 
+	base = 492d81d
+	trimbase = b4d507c
 	parent = upstream
 	previous = 0dfbd28
