--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 12e7026
-	trimbase = 
+	trim = cob_mapping_slam
+	base = 9479c31
+	trimbase = 12e7026
 	parent = upstream
 	previous = 0dfbd28
