--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8b01faa
-	trimbase = 
+	trim = cob_navigation
+	base = 13ed0b1
+	trimbase = 8b01faa
 	parent = upstream
 	previous = 0dfbd28
