--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fa250d4
-	trimbase = 
+	trim = cob_navigation_slam
+	base = 5df8b45
+	trimbase = fa250d4
 	parent = upstream
 	previous = 0dfbd28
