--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = cfc2278
-	trimbase = 
+	trim = cob_linear_nav
+	base = c225d76
+	trimbase = cfc2278
 	parent = upstream
 	previous = 0dfbd28
