--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 977dd06
-	trimbase = 
+	trim = cob_navigation_global
+	base = 2f7e4a6
+	trimbase = 977dd06
 	parent = upstream
 	previous = 0dfbd28
