--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9b49588
-	trimbase = 
+	trim = cob_navigation_local
+	base = becd8b5
+	trimbase = 9b49588
 	parent = upstream
 	previous = 0dfbd28
