--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5df8b45
+	base = 21d990a
 	trimbase = 
 	parent = release/noetic/cob_navigation_slam
-	previous = 
+	previous = 5df8b45
