--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c535b11
+	base = bd48aa6
 	trimbase = 
 	parent = debian/noetic/cob_navigation_slam
-	previous = 
+	previous = c535b11
