--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0c16fb4
+	base = be18cfb
 	trimbase = 
 	parent = debian/noetic/cob_navigation_local
-	previous = 
+	previous = 0c16fb4
