--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f7e4a6
+	base = 9b17897
 	trimbase = 
 	parent = release/noetic/cob_navigation_global
-	previous = 
+	previous = 2f7e4a6
