--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a445478
+	base = 0222bfb
 	trimbase = 
 	parent = debian/noetic/cob_navigation_global
-	previous = 
+	previous = a445478
