--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ccda2e4
+	base = cdd294d
 	trimbase = 
 	parent = release/noetic/cob_navigation_config
-	previous = 
+	previous = ccda2e4
