--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fa26dcd
+	base = efe0137
 	trimbase = 
 	parent = debian/noetic/cob_navigation_config
-	previous = 
+	previous = fa26dcd
