--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c225d76
+	base = 4f1e27d
 	trimbase = 
 	parent = release/noetic/cob_linear_nav
-	previous = 
+	previous = c225d76
