--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf79b9e
+	base = 5acaa55
 	trimbase = 
 	parent = debian/noetic/cob_linear_nav
-	previous = 
+	previous = bf79b9e
