--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13ed0b1
+	base = 2a5c3db
 	trimbase = 
 	parent = release/noetic/cob_navigation
-	previous = 
+	previous = 13ed0b1
