--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 403853f
+	base = c06d981
 	trimbase = 
 	parent = debian/noetic/cob_navigation
-	previous = 
+	previous = 403853f
