--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 549cb58
+	base = 0f020b9
 	trimbase = 
 	parent = debian/noetic/cob_mapping_slam
-	previous = 
+	previous = 549cb58
