--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 488eb9e
+	base = 624ef3d
 	trimbase = 
 	parent = release/noetic/cob_map_accessibility_analysis
-	previous = 
+	previous = 488eb9e
