--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 205fc5a
+	base = 5533e13
 	trimbase = 
 	parent = debian/noetic/cob_map_accessibility_analysis
-	previous = 
+	previous = 205fc5a
