--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 60a3ac2
+	base = dfa4ca5
 	trimbase = 
 	parent = debian/noetic/cob_navigation_slam
-	previous = 
+	previous = 60a3ac2
