--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 09043f1
+	base = 8598967
 	trimbase = 
 	parent = debian/noetic/cob_navigation_local
-	previous = 
+	previous = 09043f1
