--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2660e27
+	base = fc67cab
 	trimbase = 
 	parent = debian/noetic/cob_navigation_global
-	previous = 
+	previous = 2660e27
