--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = edb16e3
+	base = af72b23
 	trimbase = 
 	parent = debian/noetic/cob_navigation_config
-	previous = 
+	previous = edb16e3
