--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 639450e
+	base = 8806e9d
 	trimbase = 
 	parent = debian/noetic/cob_linear_nav
-	previous = 
+	previous = 639450e
