--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6c6175d
+	base = 7108c54
 	trimbase = 
 	parent = debian/noetic/cob_navigation
-	previous = 
+	previous = 6c6175d
