--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b805533
+	base = 6fb17c4
 	trimbase = 
 	parent = debian/noetic/cob_mapping_slam
-	previous = 
+	previous = b805533
