--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 942c5db
+	base = ccdfc59
 	trimbase = 
 	parent = debian/noetic/cob_map_accessibility_analysis
-	previous = 
+	previous = 942c5db
