--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = af5da7e
+	base = 892147f
 	trimbase = 
 	parent = rpm/noetic/cob_navigation_slam
-	previous = 
+	previous = af5da7e
