--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = becd8b5
+	base = 1482dee
 	trimbase = 
 	parent = release/noetic/cob_navigation_local
-	previous = 
+	previous = becd8b5
