--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ae569f
+	base = f9d2a8e
 	trimbase = 
 	parent = rpm/noetic/cob_navigation_local
-	previous = 
+	previous = 8ae569f
