--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c90a7de
+	base = 905a1f8
 	trimbase = 
 	parent = rpm/noetic/cob_navigation_global
-	previous = 
+	previous = c90a7de
