--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0febb80
+	base = 7881b98
 	trimbase = 
 	parent = rpm/noetic/cob_linear_nav
-	previous = 
+	previous = 0febb80
