--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = afb7c5a
+	base = b244eb8
 	trimbase = 
 	parent = rpm/noetic/cob_navigation
-	previous = 
+	previous = afb7c5a
