--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9479c31
+	base = bcd44fc
 	trimbase = 
 	parent = release/noetic/cob_mapping_slam
-	previous = 
+	previous = 9479c31
