--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = d54513bb
-	trimbase = 
+	base = 5a648137
+	trimbase = d54513bb
 	parent = upstream
 	previous = 0c6222fe
