--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 3cc4539a
-	trimbase = 
+	base = b3c65a5b
+	trimbase = 3cc4539a
 	parent = upstream
 	previous = 0c6222fe
