--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_global
-	base = 3909774a
-	trimbase = 
+	base = e99393cf
+	trimbase = 3909774a
 	parent = upstream
 	previous = 0c6222fe
