--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
-	base = 39ab90e2
-	trimbase = 
+	base = c0c06342
+	trimbase = 39ab90e2
 	parent = upstream
 	previous = 0c6222fe
