--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = 49cced9d
-	trimbase = 
+	base = 0c229bb0
+	trimbase = 49cced9d
 	parent = upstream
 	previous = 0c6222fe
