--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 2e0448d0
-	trimbase = 
+	base = 5502916b
+	trimbase = 2e0448d0
 	parent = upstream
 	previous = a902cd63
