--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
 	base = 5f2aa272
-	trimbase = 0848e769
+	trimbase = 
 	parent = upstream
 	previous = 0c6222fe
