--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_config
 	base = c0c06342
-	trimbase = 39ab90e2
+	trimbase = 
 	parent = upstream
 	previous = 0c6222fe
