--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_map_accessibility_analysis
 	base = 7ed0a221
-	trimbase = 63b93828
+	trimbase = 
 	parent = upstream
 	previous = 0c6222fe
