--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_linear_nav
-	base = c0ebbd48
-	trimbase = 
+	base = dfdd6519
+	trimbase = c0ebbd48
 	parent = upstream
 	previous = a902cd63
