--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation
-	base = 3139a9c6
-	trimbase = 
+	base = d8920c59
+	trimbase = 3139a9c6
 	parent = upstream
 	previous = ce548af8
