--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_mapping_slam
-	base = 7f5c837e
-	trimbase = 
+	base = a69c9d97
+	trimbase = 7f5c837e
 	parent = upstream
 	previous = ce548af8
