--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = cob_navigation_slam
 	base = c68bf59a
-	trimbase = edaab5f2
+	trimbase = 
 	parent = upstream
 	previous = a902cd63
